--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "grandalf>=0.8",
     "langchain>=1.1.3",
     "langchain-community>=0.4.1",
     "langchain-google-genai>=4.0.0",
