--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "langchain>=1.1.3",
     "langchain-community>=0.4.1",
     "langchain-google-genai>=4.0.0",
+    "langchain-ollama>=1.0.0",
     "langgraph>=1.0.4",
     "python-dotenv>=1.2.1",
 ]
