--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
 markers =
     llm: tests that call real LLMs
-    smoke: 
+    smoke: testing graph expected output with fake llm
+    node: testing nodes independently
