--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,6 +25,9 @@ jobs:
 
       - name: Lint (ruff)
         run: uv run ruff check .
+    
+      - name: Format check (ruff)
+        run: uv run ruff format --check .
 
       - name: Tests
         run: uv run pytest -v
