--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "langchain-google-genai>=4.0.0",
     "langchain-ollama>=1.0.0",
     "langgraph>=1.0.4",
+    "pre-commit>=4.5.1",
     "pytest>=9.0.2",
     "python-dotenv>=1.2.1",
     "ruff>=0.14.8",
